--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');   
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
 
 /* Common styles */
 * {
@@ -24,7 +24,83 @@ html {
     letter-spacing: 0.5rem;
     text-shadow: 0.3rem 0.3rem 0.3rem #000;
 }
+
 /* End of common styles */
+
+/* Navbar */
+.navbar {
+    width: 100%;
+    height: 14rem;
+    background-color: #000;
+    position: fixed;
+    top: -14rem;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0.2rem 0.2rem 0.2rem #000;
+    transition: top 0.4s;
+}
+
+.navbar.change {
+    top: 0;
+}
+
+.navbar-link {
+    color: #888;
+    margin: 0 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: color 0.3s;
+}
+
+.navbar-link:hover {
+    color: #fff;
+}
+
+.navbar-link i {
+    font-size: 5rem;
+}
+
+.navbar-link span {
+    font-size: 2rem;
+    font-weight: 900;
+    letter-spacing: 0.2rem;
+    margin-top: 0.5rem;
+}
+
+.menu {
+    width: 4rem;
+    height: 6rem;
+    background-color: #000;
+    position: fixed;
+    top: 1rem;
+    left: 5rem;
+    border-radius: 30rem 30rem 15rem 15rem;
+    box-shadow: 0.3rem 0.3rem 0.3rem #000,
+        -0.1rem -0.1rem -0.1rem #000;
+    cursor: pointer;
+    transition: top 0.4s;
+}
+
+.menu.change {
+    top: 15rem;
+}
+
+.menu::before {
+    content: "";
+    width: 0.3rem;
+    height: 15rem;
+    background-color: #000;
+    position: absolute;
+    top: -15rem;
+    left: 2rem;
+    box-shadow: 0.1rem 0.1rem #000;
+}
+
+/* End of Navbar */
 
 /* Section 1 */
 .section-1 {
@@ -37,7 +113,7 @@ html {
     justify-content: space-evenly;
 }
 
-.section-1-icons i{
+.section-1-icons i {
     font-size: 25rem;
     color: #a79a2d;
     position: absolute;
@@ -50,6 +126,7 @@ html {
     transform: translate(-50%, -50%) scale(1);
     transition: transform 0.3s 0.3s;
 }
+
 /* End of section 1 */
 
 /* Section 2 */
@@ -112,7 +189,7 @@ html {
     transform: skewX(45deg);
     transform-origin: bottom;
     box-shadow: -0.1rem -0.1rem 0.1rem #000;
-} 
+}
 
 .card-img {
     width: 100%;
@@ -142,6 +219,7 @@ html {
     cursor: pointer;
     box-shadow: -0.2rem -0.2rem 0.2rem #000;
 }
+
 /* End of section 2 */
 
 /* Section 3 */
@@ -156,6 +234,7 @@ html {
     align-items: center;
     justify-content: space-evenly;
 }
+
 .gallery-link {
     position: relative;
     margin: 4rem 1rem;
@@ -197,20 +276,20 @@ html {
     height: 15vw;
     object-fit: cover;
     box-shadow: 0.3rem 0.3rem 0.1rem #e92929,
-                0.5rem 0.5rem 0.1rem #a2e946,
-                0.7rem 0.7rem 0.1rem #297ce9,
-                0.9rem 0.9rem 0.1rem #e92999;
+        0.5rem 0.5rem 0.1rem #a2e946,
+        0.7rem 0.7rem 0.1rem #297ce9,
+        0.9rem 0.9rem 0.1rem #e92999;
     transition: all 0.5s;
 }
 
 .gallery-link:hover .food-img {
     box-shadow: 1rem 1rem 0.1rem #e92929,
-                2rem 2rem 0.1rem #a2e946,
-                3rem 3rem 0.1rem #297ce9,
-                4rem 4rem 0.1rem #e92999;
-    filter: blur(0.5rem); 
-    opacity: 0.5;       
-    transform: scale(1.1);    
+        2rem 2rem 0.1rem #a2e946,
+        3rem 3rem 0.1rem #297ce9,
+        4rem 4rem 0.1rem #e92999;
+    filter: blur(0.5rem);
+    opacity: 0.5;
+    transform: scale(1.1);
 }
 
 .food-name {
@@ -252,6 +331,7 @@ html {
     visibility: visible;
     transition: opacity 1s 1s;
 }
+
 /* End of section 3 */
 
 /* Section 4 */
@@ -325,4 +405,101 @@ html {
     width: 100%;
     text-align: center;
 }
+
 /* End of section 4 */
+
+/* Responsive */
+@media(max-width: 1400px) {
+    html {
+        font-size: 50%;
+    }
+
+    .section-2 {
+        height: auto;
+        padding: 10rem 0 12rem 0;
+    }
+
+    .cards-container {
+        margin-top: 10rem;
+    }
+
+    .gallery-link {
+        width: 40rem;
+        height: 25rem;
+        margin: 5rem;
+    }
+
+    .food-img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media(max-width: 1000px) {
+    .section-heading {
+        font-size: 9rem;
+        margin: 0 5rem;
+    }
+
+    .section-1-icons i {
+        font-size: 25rem;
+    }
+
+    .cards-container {
+        flex-wrap: wrap;
+    }
+
+    .card {
+        margin: 5rem;
+    }
+
+    .section-4 {
+        height: 30rem;
+    }
+}
+
+@media(max-width: 800px) {
+    .navbar-link {
+        margin: 2rem;
+    }
+
+    .navbar-link i {
+        font-size: 4rem;
+    }
+
+    .navbar-link span {
+        font-size: 2rem;
+    }
+}
+
+@media(max-width: 500px) {
+    html {
+        font-size: 40%;
+    }
+
+    .section-heading {
+        font-size: 6rem;
+        margin: 0 9rem;
+    }
+
+    .section-1-icons i {
+        font-size: 20rem;
+    }
+
+    .menu {
+        left: 2rem;
+    }
+
+    .section-4 {
+        height: 40rem;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .section-4-text {
+        margin-bottom: 8rem;
+    }
+}
+
+/* End Of Responsive */
